Fixed npm issues and changed colors to align with creative direction

--- a/generators/styles/templates/src/scss/_footer.scss
+++ b/generators/styles/templates/src/scss/_footer.scss
@@ -1,6 +1,6 @@
 // Footer
 #global-footer {
-  background-color: $dc-purple;
+  background-color: $dc-dark-blue;
   color: #fff;
   font-weight: 200;
   padding: 5px 10px;
