--- a/generators/styles/templates/src/scss/colors/_base.scss
+++ b/generators/styles/templates/src/scss/colors/_base.scss
@@ -3,8 +3,8 @@ $politico-red: #9e0000;
 $politico-dark-red: #6b0000;
 $politico-gray: #22252c;
 
-$dc-blue: #0e0e79;
-$dc-purple: #33334d;
+$dc-blue: #284D67;
+$dc-dark-blue: #142733;
 
 // Monochromes
 $black: #000;
